[gd_scene load_steps=5 format=3 uid="uid://d0p5ku565ung5"]

[ext_resource type="Script" uid="uid://dp231q6r7urad" path="res://scenes/inmate.gd" id="1_valjr"]
[ext_resource type="Texture2D" uid="uid://vn602v8byof6" path="res://temp_art/farmer_sprites.png" id="2_1elaf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c7wpr"]
atlas = ExtResource("2_1elaf")
region = Rect2(1, 1, 64, 73.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eyc50"]
size = Vector2(95, 104)

[node name="Inmate" type="Node2D"]
script = ExtResource("1_valjr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_c7wpr")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3, 7)
shape = SubResource("RectangleShape2D_eyc50")

[node name="KeyChat" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "Be careful. The dog will chase you if you get too close."

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
